--- a/css/style.css
+++ b/css/style.css
@@ -38,3 +38,33 @@ input[type="email"]{
     border-radius: 5px;
 
 }
+input[type="submit"] {
+    font-family: 'Playfair Display', 'Anta', 'Roboto', serif;
+    background-color: #888; 
+    color: #fff; 
+    padding: 15px;
+    border: none;
+    border-radius: 4px;
+    text-align: center;
+    width: 100%;
+    height: 70%;
+}
+
+#input-age-verification label {
+    margin-top: -43px;
+    margin-left: 28px;
+}
+
+input[type="checkbox"] {
+    margin-right: 5px;
+}
+
+@media only screen and (max-width: 600px) {
+    form {
+        max-width: 100%;
+    }
+
+    input[type="submit"] {
+        background-color: #bbb; 
+    }
+}
