--- a/css/style.css
+++ b/css/style.css
@@ -1,8 +1,9 @@
 h1 {
-    color:#333;
-    font-size: 2em;
+    color: #333;
+    font-size: 1.5em; 
     font-family: 'Playfair Display', 'Anta', 'Roboto', serif;
     text-align: center;
+    white-space: nowrap;
 }
 
 p {
